# flet-splash-demo

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: .last_build_id  flutter_bootstrap.js  index.html  manifest.json  version.json
docs/assets/app/: app.zip.hash
